fix for styling on mobile devices

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,8 +1,11 @@
 .header {
     background-color: #E0E0E0;
-    width: 100%;
     position: relative;
     min-width: 320px;
-    padding: 15px 10px;
+    padding: 15px 0;
     margin-bottom: 20px;
+}
+
+.header .title {
+    padding-left: 20px;
 }
